manifests/homeassistant/manifest.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: home-assistant

---
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  namespace: home-assistant
spec:
  selector:
    app: home-assistant
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8123

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: home-assistant
  name: home-assistant
spec:
  ingressClassName: nginx
  rules:
    - host: test-ha.lan
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: home-assistant
                port:
                  number: 80

---
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: home-assistant
  name: home-assistant
  labels:
    app: home-assistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: home-assistant
  template:
    metadata:
      labels:
        app: home-assistant
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - k3s-worker-01
      containers:
        - name: home-assistant
          image: homeassistant/home-assistant:stable
          ports:
            - containerPort: 8123
          volumeMounts:
            - mountPath: /config
              name: config
            # - mountPath: /dev/ttyUSB1
            #   name: zigbee
          securityContext:
            privileged: true
      volumes:
        - name: config
          hostPath:
            path: /etc/home-assistant
            type: DirectoryOrCreate
        # - name: zigbee
        #   hostPath:
        #     path: /dev/ttyUSB1
